# zengin

./: .gitignore  CLAUDE.md  README.md  config.example.yaml  pyproject.toml  requirements.txt  run_gui.py  run_webapp.bat  zengin_converter.spec  全銀変換ツール.spec
docs/: 設計仕様書.md
src/zengin_converter/: __init__.py  __main__.py  bank_resolver.py  extractor.py  gui.py  kana_utils.py  main.py  models.py  pdf_reader.py  zengin_builder.py  zengin_writer.py
tests/: test_kana_utils.py  test_zengin_builder.py
webapp/: README.md  app.py  batch_db.py  compare_zengin.py  consignor_db.py  payee_db.py
